# mei

./: .gitignore  .prettierrc  LICENSE.md  README.md  api.ts  base.ts  build.ts  builder.ts  cli.js  cmake_emitter.ts  common.ts  executable.ts  index.ts  library.ts  log.ts  package.json  text_emitter.ts  tsconfig.json  utils.ts
scripts/: clean
test/: CMakeLists.txt  build.ts  main.cpp
test/exe/: main.cpp
test/extra/: CMakeLists.txt  build.ts  extra.cpp
test/extra/src/: extra.cpp
test/single-exe/: main.cpp
